--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/employee-db
+spring.datasource.url=jdbc:mysql://localhost:3306/employee
 spring.datasource.username=root
-spring.datasource.password=Titouvita123!
+spring.datasource.password=Titouvita123
 spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto = update
